--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,8 +66,8 @@ jobs:
         run: |
           git clone --depth 1 https://github.com/termux/termux-elf-cleaner.git src/third_party/elf-cleaner
           cd src/third_party/elf-cleaner || exit 1
-          autoreconf -vfi
-          ./configure
+          mkdir -p build
+          cmake -B build
           make -j$(nproc)
           make check
           sudo make install
