--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,9 +68,9 @@ jobs:
           cd src/third_party/elf-cleaner || exit 1
           mkdir -p build
           cmake -B build
-          make -j$(nproc)
-          make check
-          sudo make install
+          make -C build -j$(nproc)
+          make -C build check
+          sudo make -C build install
 
       - name: Grant execute permission for build.sh
         run: chmod +x build.sh
