--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,11 +64,11 @@ jobs:
         run: |
           git clone --depth 1 https://github.com/termux/termux-elf-cleaner.git src/third_party/elf-cleaner
           cd src/third_party/elf-cleaner || exit 1
-          autoreconf -vfi
-          ./configure
-          make -j$(nproc)
-          make check
-          sudo make install
+          mkdir -p build
+          cmake -B build
+          make -C build -j$(nproc)
+          make -C build check
+          sudo make -C build install
 
       - name: Grant execute permission for build.sh
         run: chmod +x build.sh
