--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,11 @@ jobs:
           fetch-depth: 1
           submodules: true
         
-      - name: Setup ndk r28
+      - name: Setup ndk r28b
         uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
-          ndk-version: r28
+          ndk-version: r28b
           add-to-path: false
           
       - name: Prerequisites
